--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "request": "^2.88.0",
     "signale": "^1.4.0",
     "vue": "^2.6.7",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vue-scrollto": "^2.15.0"
   }
 }
