--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "signale": "^1.4.0",
     "vue": "^2.6.7",
     "vue-router": "^3.0.2",
-    "vue-scrollto": "^2.15.0"
+    "vue-scrollto": "^2.15.0",
+    "vuex": "^3.1.0"
   }
 }
